styles.css
/* ... */
        .about-picture {
            margin-left: 0;
            height: 75vh;
        }
        @media (max-width: 1100px) and (orientation: portrait) {
            .header {
                max-height: 20vh;
                font-size: 2.7em;
            }
            ul {
                gap: 5%;
            }
            .mobile-game-design-images {
                width: 75vw;
                height: auto;
            }   
            #mobile-game-design-box {
                width: min-content;
                flex-basis: 100%;
                flex-direction: row;
                font-size: 2em;
                font-weight: bold;
                color: #333;
                
            }
            #digital-design-intro-box {
                p::first-line {
                    font-size: 2.3em;
                    text-align: center;
                }
                flex-basis: 100%;
                font-size: 2em;
            }
            #digital-marketing-videos-box {
                width: 80vw;
                margin-bottom: 50px;
            }
            #tiktok-marketing {
                width: 80vw;
                font-size: 2.5em;
                padding: 10px 0vh 10px 0vh;
                margin-bottom: 0;
            }
            #tiktok-marketing-caption {
                width: 80vw;
                font-size: 1.5em;
                padding: 10px 0vh 10px 0vh;
                margin-top: 0;
                position: absolute;
            }
            .yoga-advertising-video {
                width: 80vw;
                margin: 0 auto;
                position: relative;
            }
            #heart-blog-title {
                font-size: 2em;
                margin: 10px;
            }
            #engagement-article-1 {
                width: auto;
            }
            #engagement-article-2 {
                float: none;
                margin: 0% 10% 0 3%;
                padding: 0px 10px 20px 10px;
                margin-top: -44px;
            }
            #heart-image {
                visibility: hidden;
            }
            #heart-caption {
                visibility: hidden;
            }
            #small-heart-image {
                visibility: visible;
                width: 50vw;
                min-width: 300px;
            }
            #small-heart-caption {
                visibility: visible;
            }
            .intro-btn {
                visibility: hidden;
            }
            .about-box {
                max-height: 50vh;
                height: 50vh;
                font-size: 1.7em;
                p::first-line {
                    font-size: 2em;
                }
            }
            .about-picture {
                width: 50vw;
                margin-left: 0vw;
            }
            #engagement-article-1 {
                width: auto;
            }
            #engagement-article-2 {
                float: none;
                margin: 0% 10% 0 3%;
                padding: 0px 10px 20px 10px;
                margin-top: -44px;
            }
            .about-container {
                flex-direction: column;
            }
            .portfolio-container {
                display: flex;
                flex-wrap: wrap;
                flex-direction: column-reverse;
                justify-content: space-between;
            }
            #javascript-game-design-box {
                height: min-content;
                width: 90vw;
            }
            #godot-game-engine-box {
                margin-top: 0px; /*because with grid i had to adjust margin for fullsize*/
                width: 90vw;
                height: min-content;
            }
            #illustration-graphic-design-box {
                margin-top: 20px;
                width: 80vw;
            }
            #webdesign-small-business-portfolio-box {
                width: 80vw;
            }
            .multiple-images {
                text-align: center;
                width: 80vw;
                height: 50vh;
                overflow: scroll;
            }
            .game-design-portfolio-video {
                max-width: 80vw;
            }
            .animation-work-video-caption {
                max-width: 80vw;
            }
            .webdesign-shots {
                width: 80vw;
                height: auto;
                margin: 5px;
            }
            .illustration-shots {
                width: 80vw;
                height: auto;
            }
            #contact-box {
                height: fit-content;
                width: 90vw;
                font-size: 2.5em;
                    p::first-line {
                        font-size: 1.7em;
                        color: #333;
                    }
            }
        }

        @media (max-width: 1050px) and (orientation: landscape) {
            #tiktok-marketing-caption {
                font-size: 1.5em;
                padding: 10px 1vh 10px 1vh;
                margin-top: -40%;
                margin-left: 300px;
                width: 40vw;
                position: absolute;
            }
        }
/* ... */

